--- a/mr-jobs/package.json
+++ b/mr-jobs/package.json
@@ -27,6 +27,7 @@
     "@nestjs/typeorm": "^7.1.4",
     "class-validator": "^0.12.2",
     "cookie-parser": "^1.4.5",
+    "ejs": "^3.1.5",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
