--- a/mr-jobs/package.json
+++ b/mr-jobs/package.json
@@ -28,10 +28,12 @@
     "class-validator": "^0.12.2",
     "cookie-parser": "^1.4.5",
     "ejs": "^3.1.5",
+    "express-session": "^1.17.1",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
+    "session-file-store": "^1.4.0",
     "typeorm": "^0.2.26"
   },
   "devDependencies": {
